Openapigen use method (#45)
* chore: rename router example

* chore: add schema only example as 00schema

* chore: rename ./ -> 02separated

* chore: update as separated files example

* chore: adjust makefile

* fix: use method (routing)

* chore: update example
